--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
  <!DOCTYPE html>
 <html>
 	<head>
-		<title>Snowboard</title>
+		<title>Football</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/style.css"> 
 	</head>
 	<body>
 		<div class="banner">
 			<div class="container">
-				<h1>Louise's Society</h1>
-				<h2>Let's swim!</h2>
+				<h1>Max's Society</h1>
+				<h2>Let's run with the ball!</h2>
 				<a href="#apply-section" class="btn-blue">Start now</a>
 			</div>
 		</div>
@@ -17,31 +17,31 @@
 		<div class="container">
 			<h2>The Society</h2>
 			<p>
-				Louise's Society is an French Company based in Paris and focused on swimming accesories.
+				Max's Society is an French Company based in Paris and focused on football shoes.
 
-				We are specialized in swimming Equipment. Our purpose is to sell our products in more than 12 countries around the World : Switzerland, Austria, Finland, Norway, Czechia, Iceland, Sweden, Slovakia, Germany, Slovenia, Poland and of course, France!
+				We want to offer only the best for football fans everywhere.
 			</p>
 
-			<h2>Louise's Company</h2>
-			<img class= "avatar" src="images/photo-profil.png" alt="Théo Martin">
+			<h2>Max's Company</h2>
+			<img class= "avatar" src="images/photo-profil.png" alt="Max">
 
 			<h2>The Trips</h2>
 			<div><div class="card">
-				<img src="images/maillot1.jpg" alt="Maillot1">
+				<img src="images/cramp1.jpg" alt="cramp1">
 				<h3>Color Black</h3>
 				<a href="#" class="btn-blue">Buy Black</a>
 			</div>
 			<div class="card">
-				<img src="images/maillot2.jpg" alt="Maillot2">
+				<img src="images/cramp2.jpg" alt="cramp2">
 				<h3>Color Blue</h3>
 				<a href="#" class="btn-blue">Buy Blue</a>
 			</div>
 			<div class="card">
-				<img src="images/maillot3.jpg" alt="Maillot3">
+				<img src="images/cramp3.jpg" alt="cramp3">
 				<h3>Color Yellow</h3>
 				<a href="#" class="btn-blue">Buy Yellow</a>
 			</div>
 		</div>
-		<div data-tf-widget="E3oo2CNi" data-tf-iframe-props="title=Typeform Theo" data-tf-medium="snippet" style="width:100%;height:400px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+		<div data-tf-widget="c1Vx7dRR" data-tf-opacity="100" data-tf-iframe-props="title=My Startup Football" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
 	</body>
 </html>
