--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
 			<h2>The Trips</h2>
 			<div><div class="card">
 				<img src="images/cramp1.jpg" alt="cramp1">
+				<h3>Color White</h3>
+				<a href="#" class="btn-blue">Buy White</a>
+			</div>
+			<div class="card">
+				<img src="images/cramp2.jpg" alt="cramp2">
 				<h3>Color Black</h3>
 				<a href="#" class="btn-blue">Buy Black</a>
 			</div>
 			<div class="card">
-				<img src="images/cramp2.jpg" alt="cramp2">
-				<h3>Color Blue</h3>
-				<a href="#" class="btn-blue">Buy Blue</a>
-			</div>
-			<div class="card">
 				<img src="images/cramp3.jpg" alt="cramp3">
-				<h3>Color Yellow</h3>
-				<a href="#" class="btn-blue">Buy Yellow</a>
+				<h3>Color Green</h3>
+				<a href="#" class="btn-blue">Buy Green</a>
 			</div>
 		</div>
 		<div data-tf-widget="c1Vx7dRR" data-tf-opacity="100" data-tf-iframe-props="title=My Startup Football" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
